# opengl-macos-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.hpp  Shader.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/src/: stb_image.c
shaders/geometry/: default.glsl
src/: Camera.cpp  Shader.cpp  main.cpp
